spacing and spacing logic fixes for splash to content transition

--- a/source/_patterns/00-atoms/00-global/01-structure/_structure-vars.scss
+++ b/source/_patterns/00-atoms/00-global/01-structure/_structure-vars.scss
@@ -23,3 +23,7 @@ $large: $max-content-width;
 /* Grid */
 $small-screen-columns: $standard-spacing 1fr $standard-spacing;
 $large-screen-columns: 1fr $max-content-width 1fr;
+
+/* Toggle/Menu Button Sizes */
+$toggle-size: 58px;
+$toggle-size--larger: 72px;
