--- a/source/_patterns/00-atoms/buttons/menu-buttons/_menu-buttons.scss
+++ b/source/_patterns/00-atoms/buttons/menu-buttons/_menu-buttons.scss
@@ -18,11 +18,14 @@
       }
 
       a {
+        @include breakpoint($large) {
+          height: $toggle-size--larger;
+        }
+
         position: relative;
         display: table-cell;
         box-sizing: border-box;
-        max-width: 320px;
-        height: 80px;
+        height: $toggle-size;
         padding: 0 $large-spacing;
         text-align: center;
         vertical-align: middle;
@@ -31,6 +34,7 @@
         outline: none;
         background-color: $dark-blue;
         line-height: 1.4em;
+        font-size: $font-size--smaller;
 
         &:hover,
         &:focus {
