--- a/source/_patterns/00-atoms/buttons/toggles/_toggles.scss
+++ b/source/_patterns/00-atoms/buttons/toggles/_toggles.scss
@@ -2,10 +2,6 @@
   * @file
   * 00-atoms/buttons/toggles/_toggles.scss
   */
-
-$toggle-size: 58px;
-$toggle-size--larger: 72px;
-
 .toggle {
   @include breakpoint($large) {
     width: $toggle-size--larger;
