--- a/source/_patterns/00-atoms/text/headings/_headings.scss
+++ b/source/_patterns/00-atoms/text/headings/_headings.scss
@@ -21,7 +21,6 @@ h6 {
 }
 
 h1 {
-  margin: 0 0 $heading-margin-bottom;
   font-size: $h1-font-size;
 }
 h2 {
